--- a/index.html
+++ b/index.html
@@ -11,38 +11,52 @@
         <div class="wrapper">
             <div class="container">
                 <div class="content post1">
-									<div class="left-side">
-											<div class="hex__small">
-												<div class="hexagon">
-													<div class="hexTop"></div>
-													<div class="hexBottom"></div>
-												</div>
-											</div>
-											<div class="hex__big">
-												<div class="hexagon">
-													<div class="hexTop"></div>
-													<div class="hexBottom"></div>
-												</div>
-											</div>
-											<div class="hex__small hex__small--bottom">
-												<div class="hexagon">
-													<div class="hexTop"></div>
-													<div class="hexBottom"></div>
-												</div>
-											</div>
-									</div>
-									<div class="right-side">
-										<div class="header">
-											<div class="header__img"><img src="img/shout.png" alt="img"></div>
-											<h1 class="header__title">BUSINESS <span>EVENTS</span></h1>
-										</div>
-										<!-- <div class="main"> -->
-											<div class="logo"><img src="img/logo.png" alt="img"></div>
+                    <div class="left-side">
+                        <div class="hex__small">
+                            <div class="hexagon">
+                                <div class="hexTop"></div>
+                                <div class="hexBottom"></div>
+                            </div>
+                        </div>
+                        <div class="hex__big">
+                            <div class="hexagon">
+                                <div class="hexTop"></div>
+                                <div class="hexBottom"></div>
+                            </div>
+                        </div>
+                        <div class="hex__small hex__small--bottom">
+                            <div class="hexagon">
+                                <div class="hexTop"></div>
+                                <div class="hexBottom"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-side">
+                        <div class="header">
+                            <div class="header__img">
+                                <img src="img/shout.png" alt="img" />
+                            </div>
+                            <h1 class="header__title">
+                                BUSINESS <span>EVENTS</span>
+                            </h1>
+                        </div>
+                        <!-- <div class="main"> -->
+                        <div class="logo">
+                            <img src="img/logo.png" alt="img" />
+                        </div>
+                        <div class="text">
+                            Lorem ipsum dolor sit Lorem ipsum dolor sit amet,
+                            consectetueradipiscing elit,sed diam nonummy nibh
+                            euismod tincidunt ut laoreet doloremagna aliquamerat
+                            volutpat. Lorem ipsum dolor sit Lorem ipsum dolor
+                            sit amet, consectetueradipiscing elit,sed diam
+                            nonummy nibh euismod tincidunt ut laoreet
+                            doloremagna aliquamerat volutpat.
+                        </div>
 
-
-										<!-- </div> -->
-									</div>
-								</div>
+                        <!-- </div> -->
+                    </div>
+                </div>
             </div>
         </div>
     </body>
