--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="wrapper">
             <div class="container">
-                <div class="content post1">
+                <div class=" post1">
                     <div class="left-side">
                         <div class="hex__small">
                             <div class="hexagon">
@@ -40,7 +40,7 @@
                                 BUSINESS <span>EVENTS</span>
                             </h1>
                         </div>
-                        <!-- <div class="main"> -->
+                        <div class="main">
                         <div class="logo">
                             <img src="img/logo.png" alt="img" />
                         </div>
@@ -54,7 +54,55 @@
                             doloremagna aliquamerat volutpat.
                         </div>
 
-                        <!-- </div> -->
+                        </div>
+                        <div class="footer">
+                            <div class="social">
+                                <nav>
+                                    <a href="#" class="social__link"
+                                        ><img
+                                            src="img/social-icons/fb.png"
+                                            alt="fb"
+                                        />
+                                    </a>
+                                    <a href="#" class="social__link"
+                                        ><img
+                                            src="img/social-icons/inst.png"
+                                            alt="inst"
+                                    /></a>
+                                    <a href="#" class="social__link"
+                                        ><img
+                                            src="img/social-icons/tw.png"
+                                            alt="tw"
+                                    /></a>
+                                    <a href="#" class="social__link"
+                                        ><img
+                                            src="img/social-icons/wa.png"
+                                            alt="wa"
+                                    /></a>
+                                </nav>
+                                <a href="#" class="footer__link">WWW.COMPANYNAME.COM</a>
+														</div>
+														<div class="info">
+															<div class="hex-bg">
+																<div class="hexagon"></div>
+																<div class="hexagon"></div>
+															</div>
+															<div class="content">
+																<div class="content__date">
+																		<span>DATE:</span> 20 MARCH
+																</div>
+																<div class="content__date content__date--last">
+																		<span>HOUR:</span> 18:30 HRS
+																</div>
+																<div class="content__contact">
+																		TELEPHONE: +01 234 567 87
+																</div>
+																<div class="content__contact content__contact--last">
+																		YOUR ADDRESS HERE
+																</div>
+															</div>
+														</div>
+                        </div>
                     </div>
                 </div>
             </div>
