--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="wrapper">
             <div class="container">
-                <div class=" post1">
+                <section class=" post1">
                     <div class="left-side">
                         <div class="hex__small">
                             <div class="hexagon">
@@ -104,7 +104,7 @@
 														</div>
                         </div>
                     </div>
-                </div>
+                </section>
             </div>
         </div>
     </body>
