--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
                             </h1>
                         </div>
                         <div class="main">
-                        <div class="logo">
-                            <img src="img/logo.png" alt="img" />
-                        </div>
-                        <div class="text">
-                            Lorem ipsum dolor sit Lorem ipsum dolor sit amet,
-                            consectetueradipiscing elit,sed diam nonummy nibh
-                            euismod tincidunt ut laoreet doloremagna aliquamerat
-                            volutpat. Lorem ipsum dolor sit Lorem ipsum dolor
-                            sit amet, consectetueradipiscing elit,sed diam
-                            nonummy nibh euismod tincidunt ut laoreet
-                            doloremagna aliquamerat volutpat.
-                        </div>
-
+                            <div class="logo">
+                                <img src="img/logo.png" alt="img" />
+                            </div>
+                            <div class="text">
+                                Lorem ipsum dolor sit Lorem ipsum dolor sit
+                                amet, consectetueradipiscing elit,sed diam
+                                nonummy nibh euismod tincidunt ut laoreet
+                                doloremagna aliquamerat volutpat. Lorem ipsum
+                                dolor sit Lorem ipsum dolor sit amet,
+                                consectetueradipiscing elit,sed diam nonummy
+                                nibh euismod tincidunt ut laoreet doloremagna
+                                aliquamerat volutpat.
+                            </div>
                         </div>
                         <div class="footer">
                             <div class="social">
@@ -80,28 +80,36 @@
                                             alt="wa"
                                     /></a>
                                 </nav>
-                                <a href="#" class="footer__link">WWW.COMPANYNAME.COM</a>
-														</div>
-														<div class="info">
-															<div class="hex-bg">
-																<div class="hexagon"></div>
-																<div class="hexagon"></div>
-															</div>
-															<div class="content">
-																<div class="content__date">
-																		<span>DATE:</span> 20 MARCH
-																</div>
-																<div class="content__date content__date--last">
-																		<span>HOUR:</span> 18:30 HRS
-																</div>
-																<div class="content__contact">
-																		TELEPHONE: +01 234 567 87
-																</div>
-																<div class="content__contact content__contact--last">
-																		YOUR ADDRESS HERE
-																</div>
-															</div>
-														</div>
+                                <a href="#" class="footer__link"
+                                    >WWW.COMPANYNAME.COM</a
+                                >
+                            </div>
+                            <div class="info">
+                                <div class="hex-bg">
+                                    <div class="hexagon"></div>
+                                </div>
+                                <div class="hex-bg">
+                                    <div class="hexagon"></div>
+                                </div>
+                                <div class="content">
+                                    <div class="content__date">
+                                        <span>DATE:</span> 20 MARCH
+                                    </div>
+                                    <div
+                                        class="content__date content__date--last"
+                                    >
+                                        <span>HOUR:</span> 18:30 HRS
+                                    </div>
+                                    <div class="content__contact">
+                                        TELEPHONE: +01 234 567 87
+                                    </div>
+                                    <div
+                                        class="content__contact content__contact--last"
+                                    >
+                                        YOUR ADDRESS HERE
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
