--- a/index.html
+++ b/index.html
@@ -113,6 +113,47 @@
                         </div>
                     </div>
                 </section>
+                <section class="post2">
+                    <div class="logo">
+                        <img src="img/logo.png" alt="logo" />
+                    </div>
+                    <div class="content">
+                        <h1 class="title">
+                            BUSINESS <br />
+                            <span>EVENTS</span>
+                        </h1>
+                        <div class="main">
+                            <div class="img--1">
+                                <img src="img/shout.png" alt="img" />
+                            </div>
+                            <div class="img--2">
+                                <img src="img/schedule.png" alt="img" />
+                            </div>
+                            <div class="img--3">
+                                <img src="img/card.png" alt="img" />
+                            </div>
+
+                            <div class="hex1">
+                                <div class="hexagon1 "></div>
+                            </div>
+                            <div class="hex2">
+                                <div class="hexagon2 "></div>
+                            </div>
+                            <div class="hex3">
+                                <div class="hexagon3">
+                                    <div class="hexTop"></div>
+                                    <div class="hexBottom"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="date">
+                        <p class="date__text">date</p>
+                        <p class="date__heavy"><span>20</span>march</p>
+                        <p class="date__text">hour</p>
+                        <p class="date__heavy"><span>18:30</span>hrs</p>
+                    </div>
+                </section>
             </div>
         </div>
     </body>
