--- a/index.html
+++ b/index.html
@@ -153,7 +153,35 @@
                         <p class="date__text">hour</p>
                         <p class="date__heavy"><span>18:30</span>hrs</p>
                     </div>
-                </section>
+								</section>
+								<section class="post4">
+									<div class="left-side">
+											<div class="logo">
+													<img src="img/logo.png" alt="logo" />
+											</div>
+											<div class="content">
+													<div class="hexagon">
+															<div class="hexTop"></div>
+															<div class="hexBottom"></div>
+														</div>
+											</div>
+											<div class="footer">
+													<div >
+															<img src="img/shout.png" alt="img" />
+													</div>
+													<div >
+															<img src="img/schedule.png" alt="img" />
+													</div>
+													<div >
+															<img src="img/card.png" alt="img" />
+													</div>
+											</div>
+
+									</div>
+									<div class="right-side"></div>
+
+
+								</section>
             </div>
         </div>
     </body>
