--- a/index.html
+++ b/index.html
@@ -178,7 +178,48 @@
 											</div>
 
 									</div>
-									<div class="right-side"></div>
+									<div class="right-side">
+										<div class="item">
+											<p class="title"><span>BUSINESS</span> EVENTS</p>
+										</div>
+										<div class="item">
+											<div>
+												<p class="date"><span>DATE</span> 20 MARCH</p>
+												<p class="date"><span>HOUR</span> 18:30 HRS</p>
+											</div>
+										</div>
+										<div class="item">
+												<div class="social">
+														<nav>
+																<a href="#" class="social__link"
+																		><img
+																				src="img/social-icons/fb.png"
+																				alt="fb"
+																		/>
+																</a>
+																<a href="#" class="social__link"
+																		><img
+																				src="img/social-icons/inst.png"
+																				alt="inst"
+																/></a>
+																<a href="#" class="social__link"
+																		><img
+																				src="img/social-icons/tw.png"
+																				alt="tw"
+																/></a>
+																<a href="#" class="social__link"
+																		><img
+																				src="img/social-icons/wa.png"
+																				alt="wa"
+																/></a>
+														</nav>
+														<a href="#" class="link"
+																>WWW.COMPANYNAME.COM</a
+														>
+													</div>
+												</div>
+										</div>
+									</div>
 
 
 								</section>
