--- a/index.html
+++ b/index.html
@@ -216,11 +216,40 @@
 														<a href="#" class="link"
 																>WWW.COMPANYNAME.COM</a
 														>
+												</div>
+										</div>
+										</div>
+
+								</section>
+								<section class="post5">
+									<h2 class="post__title">BUSINESS EVENTS</h2>
+									<div class="post__content">
+										<div class="post__logo">
+											<img src="img/logo.png" alt="logo">
+										</div>
+										<div class="post__hexagon">
+												<div class="hexagon--outer">
+													<div class="hexagon">
+															<div class="hexTop"></div>
+															<div class="hexBottom"></div>
 													</div>
 												</div>
 										</div>
 									</div>
-
+									<div class="post__footer">
+										<div class="post__date">
+											<p class="post__text">DATE 20 MARCH</p>
+											<p class="post__text">HOUR 18:30 HRS</p>
+										</div>
+										<div class="post__contact">
+											<ul>
+												<li><a href=""><img src="img/social-icons/fb.png" alt=""></a></li>
+												<li><a href=""><img src="img/social-icons/inst.png" alt=""></a></li>
+												<li><a href=""><img src="img/social-icons/tw.png" alt=""></a></li>
+												<li><a href=""><img src="img/social-icons/wa.png" alt=""></a></li>
+											</ul>
+										</div>
+									</div>
 
 								</section>
             </div>
