--- a/index.html
+++ b/index.html
@@ -153,105 +153,127 @@
                         <p class="date__text">hour</p>
                         <p class="date__heavy"><span>18:30</span>hrs</p>
                     </div>
-								</section>
-								<section class="post4">
-									<div class="left-side">
-											<div class="logo">
-													<img src="img/logo.png" alt="logo" />
-											</div>
-											<div class="content">
-													<div class="hexagon">
-															<div class="hexTop"></div>
-															<div class="hexBottom"></div>
-														</div>
-											</div>
-											<div class="footer">
-													<div >
-															<img src="img/shout.png" alt="img" />
-													</div>
-													<div >
-															<img src="img/schedule.png" alt="img" />
-													</div>
-													<div >
-															<img src="img/card.png" alt="img" />
-													</div>
-											</div>
-
-									</div>
-									<div class="right-side">
-										<div class="item">
-											<p class="title"><span>BUSINESS</span> EVENTS</p>
-										</div>
-										<div class="item">
-											<div>
-												<p class="date"><span>DATE</span> 20 MARCH</p>
-												<p class="date"><span>HOUR</span> 18:30 HRS</p>
-											</div>
-										</div>
-										<div class="item">
-												<div class="social">
-														<nav>
-																<a href="#" class="social__link"
-																		><img
-																				src="img/social-icons/fb.png"
-																				alt="fb"
-																		/>
-																</a>
-																<a href="#" class="social__link"
-																		><img
-																				src="img/social-icons/inst.png"
-																				alt="inst"
-																/></a>
-																<a href="#" class="social__link"
-																		><img
-																				src="img/social-icons/tw.png"
-																				alt="tw"
-																/></a>
-																<a href="#" class="social__link"
-																		><img
-																				src="img/social-icons/wa.png"
-																				alt="wa"
-																/></a>
-														</nav>
-														<a href="#" class="link"
-																>WWW.COMPANYNAME.COM</a
-														>
-												</div>
-										</div>
-										</div>
-
-								</section>
-								<section class="post5">
-									<h2 class="post__title">BUSINESS EVENTS</h2>
-									<div class="post__content">
-										<div class="post__logo">
-											<img src="img/logo.png" alt="logo">
-										</div>
-										<div class="post__hexagon">
-												<div class="hexagon--outer">
-													<div class="hexagon">
-															<div class="hexTop"></div>
-															<div class="hexBottom"></div>
-													</div>
-												</div>
-										</div>
-									</div>
-									<div class="post__footer">
-										<div class="post__date">
-											<p class="post__text">DATE 20 MARCH</p>
-											<p class="post__text">HOUR 18:30 HRS</p>
-										</div>
-										<div class="post__contact">
-											<ul>
-												<li><a href=""><img src="img/social-icons/fb.png" alt=""></a></li>
-												<li><a href=""><img src="img/social-icons/inst.png" alt=""></a></li>
-												<li><a href=""><img src="img/social-icons/tw.png" alt=""></a></li>
-												<li><a href=""><img src="img/social-icons/wa.png" alt=""></a></li>
-											</ul>
-										</div>
-									</div>
-
-								</section>
+                </section>
+                <section class="post4">
+                    <div class="left-side">
+                        <div class="logo">
+                            <img src="img/logo.png" alt="logo" />
+                        </div>
+                        <div class="content">
+                            <div class="hexagon">
+                                <div class="hexTop"></div>
+                                <div class="hexBottom"></div>
+                            </div>
+                        </div>
+                        <div class="footer">
+                            <div>
+                                <img src="img/shout.png" alt="img" />
+                            </div>
+                            <div>
+                                <img src="img/schedule.png" alt="img" />
+                            </div>
+                            <div>
+                                <img src="img/card.png" alt="img" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-side">
+                        <div class="item">
+                            <p class="title"><span>BUSINESS</span> EVENTS</p>
+                        </div>
+                        <div class="item">
+                            <div>
+                                <p class="date"><span>DATE</span> 20 MARCH</p>
+                                <p class="date"><span>HOUR</span> 18:30 HRS</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="social">
+                                <nav>
+                                    <a href="#" class="social__link"
+                                        ><img
+                                            src="img/social-icons/fb.png"
+                                            alt="fb"
+                                        />
+                                    </a>
+                                    <a href="#" class="social__link"
+                                        ><img
+                                            src="img/social-icons/inst.png"
+                                            alt="inst"
+                                    /></a>
+                                    <a href="#" class="social__link"
+                                        ><img
+                                            src="img/social-icons/tw.png"
+                                            alt="tw"
+                                    /></a>
+                                    <a href="#" class="social__link"
+                                        ><img
+                                            src="img/social-icons/wa.png"
+                                            alt="wa"
+                                    /></a>
+                                </nav>
+                                <a href="#" class="link">WWW.COMPANYNAME.COM</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="post5">
+                    <h2 class="post__title">BUSINESS EVENTS</h2>
+                    <div class="post__content">
+                        <div class="post__logo">
+                            <img src="img/logo.png" alt="logo" />
+                        </div>
+                        <div class="post__hexagon">
+                            <div class="hexagon--outer">
+                                <div class="hexagon">
+                                    <div class="hexTop"></div>
+                                    <div class="hexBottom"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="post__footer">
+                        <div>
+                            <p class="post__text">DATE 20 MARCH</p>
+                            <p class="post__text">HOUR 18:30 HRS</p>
+                        </div>
+                        <div>
+                            <ul class="post__social">
+                                <li>
+                                    <a href=""
+                                        ><img
+                                            src="img/social-icons/fb.png"
+                                            alt="fb"
+                                    /></a>
+                                </li>
+                                <li>
+                                    <a href=""
+                                        ><img
+                                            src="img/social-icons/inst.png"
+                                            alt="inst"
+                                    /></a>
+                                </li>
+                                <li>
+                                    <a href=""
+                                        ><img
+                                            src="img/social-icons/tw.png"
+                                            alt="tw"
+                                    /></a>
+                                </li>
+                                <li>
+                                    <a href=""
+                                        ><img
+                                            src="img/social-icons/wa.png"
+                                            alt="wa"
+                                    /></a>
+                                </li>
+                            </ul>
+                            <p class="post__link">
+                                <a href="">WWW.YOURWEBSITE.COM</a>
+                            </p>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
     </body>
